# =============================================================================
#  R E P S   ·   arena-lang
# =============================================================================
[package]
name    = "arena-lang"
version = "1.0.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Typed bump/arena allocation for AST and IR nodes with stable addresses."

# Keywords (5 max)
keywords = ["compiler", "language", "arena", "allocator"]

# Categories
categories = ["development-tools", "memory-management"]

# Links
homepage      = "https://github.com/jamesgober/arena-lang"
repository    = "https://github.com/jamesgober/arena-lang"
documentation = "https://docs.rs/arena-lang"

# Authors
authors = ["James Gober <me@jamesgober.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "arena_lang"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Links the standard library. The crate needs only `alloc`, so disabling this
# compiles arena-lang under `#![no_std]` with no loss of function.
std = []


# DEPENDENCIES
# #################################
[dependencies]


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# BENCHMARKS
# #################################
[[bench]]
name    = "bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
